<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.salud.CrearMedicamento"
    tools:showIn="@layout/activity_crear_medicamento">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_nom" />

    <EditText
        android:id="@+id/etMedNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/med_hint_nombre"
        android:importantForAutofill="no"
        android:inputType="textPersonName|textCapWords" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/med_dosis" />

    <EditText
        android:id="@+id/etMedDosis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/med_hint_dosis"
        android:importantForAutofill="no"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/med_hora" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvMedHora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_hora"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvMedPeriodo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_periodo"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/med_cantidad" />

    <EditText
        android:id="@+id/etMedCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/med_hint_cantidad"
        android:importantForAutofill="no"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/txt_categoria" />

    <Spinner
        android:id="@+id/spMedCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/black"
        android:dropDownWidth="match_parent"
        android:entries="@array/array_categorias_medicamentos"
        android:padding="5dp" />

    <TextView
        android:id="@+id/tvMedCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/med_spinner_categoria"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:visibility="gone" />

</LinearLayout>