<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.finanzas.CrearIngreso"
    tools:showIn="@layout/activity_crear_ingreso">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fin_txt_ingreso" />

    <EditText
        android:id="@+id/etIngresoCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/fin_hint_ingreso"
        android:importantForAutofill="no"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/fin_txt_nota" />

    <EditText
        android:id="@+id/etIngresoNota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/fin_hint_ingreso_nota"
        android:importantForAutofill="no"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/txt_categoria" />

    <Spinner
        android:id="@+id/spIngresoCateg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/array_categorias"
        android:padding="5dp" />

</LinearLayout>