<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="5dp"
    android:paddingEnd="5dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.extras.Tdah"
    tools:showIn="@layout/activity_tdah">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/tdah_txt_aviso"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tdah_txt_test" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                app:srcCompat="@drawable/gen_test"
                android:contentDescription="@string/tdah_img_test" />

            <Button
                android:id="@+id/btnPruebaTdah"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@android:color/white"
                android:clickable="true"
                android:text="@string/tdah_btn_test"
                android:textAlignment="textStart"
                android:focusable="true" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tdah_txt_grupo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="33dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                app:srcCompat="@drawable/gen_facebook"
                android:contentDescription="@string/tdah_img_grupo" />

            <Button
                android:id="@+id/btnGrupoTdah"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@android:color/white"
                android:clickable="true"
                android:text="@string/tdah_btn_grupo"
                android:textAlignment="textStart"
                android:focusable="true" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tdah_txt_chadd" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="37dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                app:srcCompat="@drawable/gen_files_black_24dp"
                android:contentDescription="@string/tdah_img_chadd" />

            <Button
                android:id="@+id/btnChadd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@android:color/white"
                android:clickable="true"
                android:text="@string/tdah_btn_chadd"
                android:textAlignment="textStart"
                android:focusable="true" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tdah_txt_juegos" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="37dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                app:srcCompat="@drawable/gen_puzzle_black_24dp"
                android:contentDescription="@string/tdah_img_puzzles" />

            <Button
                android:id="@+id/btnPuzzles"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@android:color/white"
                android:clickable="true"
                android:text="@string/tdah_btn_puzzles"
                android:textAlignment="textStart"
                android:focusable="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="37dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                app:srcCompat="@drawable/gen_mandalas_black_24dp"
                android:contentDescription="@string/tdah_img_mandalas" />

            <Button
                android:id="@+id/btnMandalas"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@android:color/white"
                android:clickable="true"
                android:text="@string/tdah_btn_mandalas"
                android:textAlignment="textStart"
                android:focusable="true" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>