<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/ingresoCantidad"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        tools:text="@string/fin_txt_ingreso_cantidad" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ingresoFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            tools:text="@string/fin_txt_fecha_2" />

        <TextView
            android:id="@+id/ingresoCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            tools:text="@string/txt_categoria" />
    </LinearLayout>

</LinearLayout>