<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="clip_horizontal|center">

    <TextView
        android:id="@+id/gastoCantidad"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        tools:text="@string/fin_txt_gasto_cantidad" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/gastoFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            tools:text="@string/fin_txt_fecha_2" />

        <TextView
            android:id="@+id/gastoCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            tools:text="@string/txt_categoria" />
    </LinearLayout>

</LinearLayout>